@@ -1,3 +1,4 @@
+0.93.1-0 @06/15/2005 14:15:00 UTC@
 0.93.0-0 @06/07/2005 02:30:00 UTC@
 0.92.4-0 @05/18/2005 19:20:00 UTC@
 0.92.3-0 @05/10/2005 23:20:00 UTC@
