@@ -13,7 +13,7 @@ namespace vprTest
 {
 CPPUNIT_TEST_SUITE_REGISTRATION( LibraryTest );
 
-#if defined(VPR_OS_Win32)
+#if defined(VPR_OS_Windows)
 static const std::string C_MOD("cmod.dll");
 static const std::string CXX_MOD("cxxmod.dll");
 #elif defined(VPR_OS_Darwin)
