@@ -67,7 +67,7 @@ void SocketConnectorAcceptorTest::testAcceptorConstruction ()
 void SocketConnectorAcceptorTest::testSpawnedAcceptor ()
 {
    threadAssertReset();
-#ifdef VPR_OS_Win32
+#ifdef VPR_OS_Windows
    long rand_num(rand());
 #else
    long rand_num(random());
