@@ -49,7 +49,7 @@
 #  include <unistd.h>
 #endif
 
-#ifdef VPR_OS_Win32
+#ifdef VPR_OS_Windows
 #  include <process.h>
 #endif
 
